mkdocs-material-2.5.0 (2017-01-13)

  * Added support for right-to-left languages

mkdocs-material-2.4.0 (2017-01-11)

  * Added focus state for clipboard buttons
  * Fixed #400: Search bar steals tab focus
  * Fixed search not closing on ENTER when result is selected
  * Fixed search not closing when losing focus due to TAB
  * Fixed collapsed navigation links getting focus
  * Fixed outline being cut off on TAB focus of navigation links
  * Fixed bug with first search result navigation being ignored
  * Removed search result navigation via TAB (use UP and DOWN)
  * Removed outline resets for links
  * Improved general tabbing behavior on desktop

mkdocs-material-2.3.0 (2017-01-09)

  * Added example (synonym: snippet) style for Admonition
  * Added synonym abstract for summary style for Admonition

mkdocs-material-2.2.6 (2017-12-27)

  * Added Turkish translations
  * Fixed unclickable area below header in case JavaScript is not available

mkdocs-material-2.2.5 (2017-12-18)

  * Fixed #639: Broken default favicon

mkdocs-material-2.2.4 (2017-12-18)

  * Fixed #638: Build breaks with Jinja < 2.9

mkdocs-material-2.2.3 (2017-12-13)

  * Fixed #630: Admonition sets padding on any last child
  * Adjusted Chinese (Traditional) translations

mkdocs-material-2.2.2 (2017-12-08)

  * Added Dutch translations
  * Adjusted targeted link and footnote offsets
  * Simplified Admonition styles and fixed padding bug

mkdocs-material-2.2.1 (2017-12-02)

  * Fixed #616: Minor styling error with title-only admonition blocks
  * Removed border for table of contents and improved spacing

mkdocs-material-2.2.0 (2017-11-22)

  * Added support for hero teaser
  * Added Portuguese translations
  * Fixed #586: Footnote backref target offset regression
  * Fixed #605: Search stemmers not correctly loaded

mkdocs-material-2.1.1 (2017-11-21)

  * Replaced deprecated babel-preset-es2015 with babel-preset-env
  * Refactored Gulp build pipeline with Webpack
  * Removed right border on sidebars