@@ -1,3 +1,9 @@
+mkdocs-material-2.6.0 (2017-xx-xx)
+
+  * Added permalink to main headline
+  * Added English as a fallback for missing translations
+  * Improved accessibility with skip-to-content link
+
 mkdocs-material-2.5.0 (2017-01-13)
 
   * Added support for right-to-left languages
